fix: swarm add less white space

--- a/main/http_server/axe-os/src/app/components/swarm/swarm.component.scss
+++ b/main/http_server/axe-os/src/app/components/swarm/swarm.component.scss
@@ -1,6 +1,6 @@
-form {
-    margin-bottom: 20px;
-}
+// form {
+//     margin-bottom: 20px;
+// }
 
 table {
     width: 100%;
